--- a/package.json
+++ b/package.json
@@ -26,17 +26,28 @@
     "test": "mocha"
   },
   "dependencies": {
-    "noflo": "~0.4.0"
+    "noflo": "~0.4.0",
+    "superagent": "~0.15.4"
   },
   "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-coffee": "~0.6.6",
+    "grunt-coffeelint": "~0.0.6",
+    "grunt-cafe-mocha": "~0.1.2",
     "chai": "~1.7.0",
-    "mocha": "~1.12.0"
+    "mocha": "~1.12.0",
+    "grunt-mocha-phantomjs": "~0.3.0",
+    "grunt-component-build": "~0.2.7",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-watch": "~0.3.1",
+    "component-json": "~0.1.4",
+    "grunt-combine": "~0.8.3",
+    "grunt-component": "~0.1.2"
   },
   "keywords": [],
   "noflo": {
     "components": {
-      "Get": "components/Get.js"
-    },
-    "graphs": {}
+      "MakeRequest": "components/MakeRequest.coffee"
+    }
   }
 }
