--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "node": ">= 0.10.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test:nodejs"
   },
   "dependencies": {
     "noflo": "~0.4.0",
